<resources>
    <string name="app_name">누비서울</string>
    <string name="title_activity_main">누비서울</string>
    <string name="title_activity_recommend">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_default_title">일정추가</string>
    <string name="plan_make_title">새로운 일정 만들기</string>
    <string name="main_title">서울 여행 일정을 만들어 보세요!</string>
    <string name="trip_title">일정 이름</string>
    <string name="destination_title">세부일정</string>
    <string name="date_title">여행날짜</string>
    <string name="save_title">저장</string>
    <string name="edit_btn">수정</string>
    <string name="add_destination">세부일정 추가하기</string>
    <string name="detail_date_text">세부일정</string>
    <string name="edit_title">일정 수정하기</string>
    <string name="planname_title"> 일정</string>
    <string name="plandate_title">여행 날짜 : </string>
    <string name="plandetail_subtitle">일정</string>

    <string name="plan_title_hint">일정 이름을 입력하세요.</string>
    <string name="plan_sdate_hint">시작날짜 입력</string>
    <string name="plan_edate_hint">끝날짜 입력</string>
    <string name="plan_place_hint">여행 장소를 추가하세요.</string>

    <string name="plan_list_place_msg">개 장소 저장됨</string>
    <string name="tab_plan_title">나의 일정</string>
    <string name="tab_recommend_title">일정 추천</string>
    <string name="course">코스</string>
    <string name="empty_msg">나의 일정을 추가해주세요 -></string>
    <string name="delete_msg">일정을 삭제하시겠습니까?</string>
    <string name="ok">예</string>
    <string name="no">아니요</string>
    <string name="place_add_fail_toast">추가된 장소를 수정할수 없으므로 세부일정을 삭제하고 새로 추가하여 만들어주세요.</string>
    <string name="date_error_toast_msg">시작날짜보다 작을수가 없으므로 다시 입력하여 주세요.</string>
    <string name="subject_error_toast_msg">일정 이름이 입력되지 않았습니다.</string>
    <string name="sdate_error_toast_msg">시작날짜가 입력되지 않았습니다.</string>
    <string name="edate_error_toast_msg">끝날짜가 입력되지 않았습니다.</string>
    <string name="place_error_toast_msg">장소가 입력되지 않았습니다.</string>
    <string name="plan_add_finish_msg">일정이 추가되었습니다.</string>
    <string name="finish_msg">어플을 종료하시겠습니까?</string>
    <string name="network_error_msg">인터넷 연결되어 있지 않으므로 확인해주세요.(비정상 동작 할 수 있습니다.)</string>
    <string name="permission_location_fail_msg">위치 권한 획득에 실패하였습니다. 권한을 승인해주세요.(위치권한이 있어야 여행장소를 볼 수 있습니다.)</string>
</resources>
