<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize">

        <include layout="@layout/layout_toolbar_v2"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingLeft="15dp"
        android:background="#CCCCCC"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/travelSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:text="@string/trip_title"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="19dp"
            android:hint="@string/plan_title_hint"
            android:textColorHint="#33000000"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:text="@string/save_title"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/plan_ok_btn_bg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_subject"
        android:layout_above="@id/registerButton">

        <LinearLayout
            android:id="@+id/ll_addLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
